fix horizontal scroll footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -12,6 +12,7 @@
   text-decoration: none;
   gap: 0;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 .footer > p {
